# PPCA-Raytracer-2022

./: LICENSE  README-cn.md  README.md  UnityShader笔记.md
raytracer/: Cargo.toml
raytracer/src/: main.rs  perlin.rs
raytracer/src/basicTool/: camera.rs  ray.rs  vec3.rs
raytracer/src/basic_tools/: camera.rs  mod.rs  preview.rs  ray.rs  render.rs  vec3.rs
raytracer/src/hittable/: aabb.rs  bvh.rs  fog.rs  hittable_list.rs  hittable_origin.rs  mod.rs  moving_sphere.rs  pdf.rs  ring.rs  scenes  sphere.rs  triangle.rs  xy_rectangle.rs
raytracer/src/item/: sphere.rs
raytracer/src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mixmaterial.rs  mod.rs
raytracer/src/texture/: mod.rs  perlin.rs  text.rs
