[package]
name = "raytracer"
version = "0.1.0"
authors = ["lillian039 <https://github.com/lillian039>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rand = "0.8.3"
tobj="2.0.3"


console = "0.9.1"    # console text format
indicatif = "0.16.2" # progress bar
